# UMS

./: ADS1X15.cpp  ADS1X15.h  AddressIdentifier.cpp  AddressIdentifier.hpp  AllSensorsScreen.cpp  AllSensorsScreen.h  BMP280.cpp  BMP280.h  BluetoothSerial.cpp  BluetoothSerial.h  BuildInGPIO.cpp  BuildInGPIO.h  CMakeLists.txt  ConflictingSensors.cpp  ConflictingSensors.hpp  Error.cpp  Error.h  GeneralDisplay.h  INA3221.cpp  INA3221.h  JsonParserFunctions.cpp  JsonParserFunctions.hpp  JsonSerializer.cpp  JsonSerializer.h  M9axisGiro.cpp  M9axisGiro.hpp  MPU9250.cpp  MPU9250.h  MPU9250.hpp  MPU9250_mlib.cpp  MPU9250_mlib.h  Mqtt_server.cpp  Mqtt_server.h  README.md  Sensor.cpp  Sensor.hpp  SensorsTab.cpp  SensorsTab.h  SerialCom.cpp  SerialCom.h  (+43 more)
ActualSensors/mpu9250/: MPU9250.h
AllAboutSensors/: AddressIdentifier.hpp  ConflictingSensors.hpp  sensorEnum.h
data/: SensorAddresses.json  SensorAddresses.txt  sysInfo.json  sysInfo.txt
data/comData/: 2.json
data/sensorData/: 1.json  2.json  3.json  4.json  5.json  8.json
display/: displayFunctons.cpp
docs/html/: globals_f.html  globals_l.html  graph_legend.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_10.map  inherit_graph_10.md5  inherit_graph_11.map  inherit_graph_11.md5  inherit_graph_12.map  inherit_graph_12.md5  inherit_graph_13.map  inherit_graph_13.md5  inherit_graph_14.map  inherit_graph_14.md5  inherit_graph_15.map  inherit_graph_15.md5  inherit_graph_16.map  inherit_graph_16.md5  (+20 more)
jsonParsing/: JsonParserFunctions.hpp
spiffs/: spiffs.hpp
(+651 files in other folders)
